# python-event-sourcing-tutorial

./: .gitignore  README.md  compose.yaml  pyproject.toml
.github/workflows/: test.yaml
apps/backend/src/connect_four/: cli.py
apps/backend/src/connect_four/domain/: application.py  board.py  events.py  exceptions.py  game.py
apps/backend/src/connect_four/persistence/: eventstoredb.py
apps/backend/src/connect_four/presentation/: board.py
apps/backend/tests_connect_four/domain/: test_application.py  test_board.py  test_game.py
apps/backend/tests_connect_four/persistence/: test_eventstoredb.py
exercises/: README.md  exercise-01-start-game.md  exercise-02-play-the-game.md  exercise-03-persist-the-events.md
src/connect_four/: cli.py
src/connect_four/application/: __init__.py  application.py  repository.py
src/connect_four/domain/: application.py  board.py  events.py  exceptions.py  game.py  result.py
src/connect_four/persistence/: eventstoredb.py
src/connect_four/presentation/: __init__.py  board.py
tests/domain/: test_game.py
tests/persistence/: conftest.py  test_game_repository.py
